# HRMS-Assessment-backend-

./: .env  .gitignore  README.md  main.py  manage.py  pyproject.toml
config/v1/: __init__.py  api_config.py  database_config.py  settings.py
core/: __init__.py  fastapi_app.py
core/v1/api/department/: get_department.py
core/v1/api/user_management/: create_attendance.py  create_user.py  delete_user.py  view_all_attendance.py  view_all_user.py
migrations/: 0001_initial.py
models/: __init__.py
models/v1/database/: employee.py  employee_attendance.py
models/v1/schemas/: __init__.py  department.py  employee.py  employee_attendance.py  exception_handler.py
